--- a/LogWindow/App.config
+++ b/LogWindow/App.config
@@ -18,6 +18,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    
-  <add name="Model1" connectionString="data source=208-MAIN\SQLEXPRESS;initial catalog=user1;persist security info=True;user id=user1;password=userdb1;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="Model1" connectionString="data source=208-MAIN\SQLEXPRESS;initial catalog=user1;persist security info=True;user id=user1;password=userdb1;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model2" connectionString="data source=DESKTOP-TNGEF02;initial catalog=Labaratory;persist security info=True;user id=Artem;password=userdb;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
