--- a/LogWindow/LogWindow.csproj
+++ b/LogWindow/LogWindow.csproj
@@ -16,7 +16,7 @@
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -44,6 +44,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Xml" />
@@ -76,6 +77,7 @@
     <Compile Include="LogHistory.xaml.cs">
       <DependentUpon>LogHistory.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model2.cs" />
     <Compile Include="Models\Admin.cs" />
     <Compile Include="Models\Blood.cs" />
     <Compile Include="Models\BloodServices.cs" />
@@ -92,6 +94,7 @@
     <Compile Include="ResearcherWindow.xaml.cs">
       <DependentUpon>ResearcherWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="users_.cs" />
     <Page Include="AdminWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -139,6 +142,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="MainImages.resx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -153,7 +157,22 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="logo.png" />
+    <None Include="Resources\logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\laborant_1.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\laborant_2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Администратор.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Бухгалтер.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="TestModels\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
